--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -22,10 +22,14 @@ $black_italic_font: "HelveticaNeueCyr-BlackItalic"
 
 // Media breakpoints
 $mobile: 768px
+$tablet: 991px
 
 
 // Colors
 $accent_color_1: #f39e09
 $font_color: #000000
 
+$top_top_mobile_panel_color: #e3e3e3
 $top_panel_color: #f6f4f5
+$overlay_header_color: rgba(0,0,0,.3)
+$overlay_h1_color: rgba(255, 255, 255, 0.149)
