--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -27,7 +27,10 @@ $tablet: 991px
 
 // Colors
 $accent_color_1: #f39e09
+$accent_color_2: #33aafe
 $font_color: #000000
+$muted_bg: #f6f5f5
+$security_color: #17a425
 
 $top_top_mobile_panel_color: #e3e3e3
 $top_panel_color: #f6f4f5
